# -otaku-pulse

./: .claudeignore  .gitattributes  .gitignore  .windsurfrules  AGENTS.md  CASCADE_PROMPT.md  CLAUDE.md  HANDOFF.md  HANDOFF_V3.md  PROJECT_COMPLETE.md  README.md  biome.json  design.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: critical-context.md  settings.json
.claude/agents/: reflector.md  rust-reviewer.md  test-writer.md  ts-reviewer.md
.claude/commands/: perf.md  plan.md  reflect.md  review.md  self-improve.md  session-end.md  test.md
.claude/rules/: anilist_rate_limit.md  api-data-sources.md  content_hash_column.md  db-patterns.md  design-system.md  error-patterns.md  learned-archive.md  (+6 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
docs/: API_INTEGRATION.md  ARCHITECTURE.md  DATA_MODEL.md  DEDUP_STRATEGY.md  FEED_CATALOG.md  LLM_STRATEGY.md  ROADMAP.md  rust-perf.md
e2e/: app.spec.ts  navigation.spec.ts
src/: App.tsx  CLAUDE.md  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/graphql/: airing_schedule.graphql  anilist_schema.graphql  anime_schedule.graphql  seasonal_anime.graphql  trending_manga.graphql
src-tauri/migrations/: 001_initial.sql  002_keyword_filters.sql  003_fts5.sql  004_v2_discover.sql  005_deepdive_cache.sql  006_performance_indexes.sql  007_additional_indexes.sql  008_phase1_foundation.sql  009_phase2_resilience.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: articles.rs  collect.rs  default_feeds.rs  digest.rs  discover.rs  discover_ai.rs  discover_profile.rs  feed.rs  filters.rs  llm.rs  mod.rs  schedule.rs  scheduler.rs  settings.rs
src-tauri/src/infra/: anilist_client.rs  anilist_client_tests.rs  credential_store.rs  database.rs  http_client.rs  llm_client.rs  mod.rs  notification.rs  ollama_client.rs  perplexity_client.rs  rate_limiter.rs  rate_limiter_tests.rs  rawg_client.rs  reddit_fetcher.rs  reddit_fetcher_tests.rs  reddit_json.rs  rss_fetcher.rs  steam_client.rs  steam_client_tests.rs
src-tauri/src/models/: db.rs  dto.rs  mod.rs
src-tauri/src/parsers/: bbcode_parser.rs  bbcode_parser_tests.rs  graphql_parser.rs  graphql_parser_tests.rs  graphql_types.rs  mod.rs  rss_helpers.rs  rss_parser.rs  rss_parser_tests.rs  schedule_parser.rs
src-tauri/src/services/: article_queries.rs  article_queries_tests.rs  collector.rs  collectors.rs  dedup_service.rs  deepdive_helpers.rs  deepdive_service.rs  digest_generator.rs  digest_queries.rs  discover_queries.rs  feed_queries.rs  filter_queries.rs  fts_queries.rs  highlights_helpers.rs  highlights_service.rs  library_queries.rs  mod.rs  opml_service.rs  personal_scoring.rs  profile_service.rs  scheduler.rs  scoring_keywords.rs  scoring_service.rs  settings_queries.rs  summary_service.rs  test_helpers.rs
(+226 files in other folders)
