[package]
name = "otaku-pulse"
version = "1.0.0"
edition = "2024"
description = "AI-powered otaku news aggregator & digest generator"

[lib]
name = "otaku_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
feed-rs = "2.1"
scraper = "0.20"
tokio-cron-scheduler = "0.13"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
graphql_client = "0.14"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.12"
sha2 = "0.10"
regex = "1.10"
wiremock = "0.6"
http = "1.1"
unicode-normalization = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
