[package]
name = "otaku-pulse"
version = "1.0.0"
edition = "2024"
description = "AI-powered otaku news aggregator & digest generator"

[lib]
name = "otaku_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
reqwest = { version = "~0.12", features = ["json", "rustls-tls"] }
feed-rs = "~2.1"
scraper = "0.20"
tokio-cron-scheduler = "0.13"
sqlx = { version = "~0.8", features = ["sqlite", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.12"
sha2 = "0.10"
regex = "1.10"
unicode-normalization = "0.1"
keyring = "3"
rfd = "0.15"

[dev-dependencies]
wiremock = "0.6"
http = "1.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ---------------------------------------------------------------------------
# リリースプロファイル (.claude/rules/rust-perf.md 参照)
# ---------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = "fat"          # リンク時最適化 — バイナリサイズ削減・実行速度向上
codegen-units = 1    # 最大最適化 (コンパイル時間増加とのトレードオフ)
panic = "abort"      # unwind コードを除去しバイナリ軽量化
strip = true         # デバッグシンボル除去

# cargo build --profile profiling でフレームグラフ取得用ビルド
[profile.profiling]
inherits = "release"
debug = true         # デバッグシンボルを残す
strip = false
